[package]
name = "udp-obfuscat"
version = "2.3.1"
description = "UDP proxy with obfuscation"
license = "ISC"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.13", features = ["cargo", "derive"] }
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["serde"] }
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0", features = ["derive"] }
systemd-journal-logger = "2.1.1"
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
] }
toml = "0.8.19"
