[package]
name = "udp-obfuscat"
version = "2.3.2"
description = "UDP proxy with obfuscation"
license = "MIT"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["cargo", "derive"] }
env_logger = "0.11.6"
log = { version = "0.4.25", features = ["serde"] }
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0", features = ["derive"] }
systemd-journal-logger = "2.2.0"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
] }
toml = "0.8.19"
